--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://ensorta.com
 repository: https://github.com/hsbijarniya/image_editor_plus
 
 environment:
-    sdk: ">=2.15.1 <3.0.0"
-    flutter: ">=1.17.0"
+  sdk: ">=2.15.1 <3.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
@@ -29,6 +29,7 @@ dependencies:
   colorfilter_generator: ^0.0.8
   hand_signature: ^2.3.0+1
   image_compression_flutter: ^1.0.2
+  loader_overlay: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,4 +37,4 @@ dev_dependencies:
   flutter_lints: ^2.0.1
 
 flutter:
-    uses-material-design: true
+  uses-material-design: true
